--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,8 @@
     "builds": [
       {
         "src": "server.js",
-        "use": "@vercel/node"
+        "use": "@vercel/node",
+        "build": "npx tailwindcss -i ./src/main.css -o ./public/styles.css --watch"
       }
     ],
     "routes": [
