--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
+    "build": "npx tailwindcss -i ./src/main.css -o ./public/styles.css --watch"
   },
   "author": "",
   "license": "ISC",
